looks a bit better now

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guess a number</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <main>
+        <h1>Guess a number from 0 to 100</h1>
+        <input type="text" id="input" required>
+        <button id="button">guess</button>
 
-    <input type="text" id="input" required>
-    <button id="button">guess</button>
-
-    <p id="number"></p>
+        <p id="result"></p>
+    </main>
     <script src="index.js"></script>
 </body>
 
